# peter-mcp-codex

./: AGENTS.md  CLAUDE.md  README.md  mcp_config.toml  reset.sh  setup.sh
cisco-mcp/: HOWTO.md  README.md  network.MD  pyproject.toml  switches.txt
cisco-mcp/cisco_mcp/: __init__.py  inventory.py  models.py  server.py  ssh_client.py
cisco-mcp/cisco_mcp/parsers/: __init__.py  bgp.py  interface.py  nve.py  ospf.py  vpc.py
genAI/agents/: cloud-architect.md  docs-architect.md  python-pro.md  task-tester.md  technical-writer.md
genAI/commands/: catch-up.md  checkout.md  commit-and-push.md  pr.md  pull_and_prune.md  refactor.md
genAI/skills/coupling-evaluation/: SKILL.md
genAI/skills/skill-creator/: SKILL.md
genAI/skills/skill-evolver/: IMPROVEMENTS.md  SKILL.md
genAI/skills/superpowers/: SKILL.md
genAI/skills/technical-report-writing/: SKILL.md
genAI/skills/technical-system-research/: SKILL.md
genAI/skills/tool-development/: SKILL.md  bash-tools.md  design-patterns.md  examples.md  mcp-servers.md  (+2 more)
mcp-base/: pyproject.toml
mcp-base/mcp_base/: __init__.py  server.py
perf-mcp/: README.md  biome.json  package-lock.json  package.json  setup-node.sh  vitest.config.ts
perf-mcp/docs/: design.md  research-notes.md  tool_reference.md  workflows.md
perf-mcp/evals/: questions.xml
perf-mcp/src/: index.ts  server.ts
tool-sample/: README.md  pyproject.toml
tool-sample/my_tool/: __init__.py  cli.py  constants.py  exceptions.py
tool-sample/my_tool_mcp/: __init__.py  server.py  tools.py
tool-sample/tests/: __init__.py  conftest.py  test_cli.py
(+56 files in other folders)
