[project]
name = "cisco-mcp"
version = "1.0.0"
description = "MCP server for Cisco switch management in TIG VXLAN/EVPN fabric"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "asyncssh>=2.14.0",
    "pydantic>=2.0",
    "anyio>=4.0",
]

[project.scripts]
cisco-mcp = "cisco_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cisco_mcp"]
